// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Unconfirmed transaction table > should not render in lg 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="table-wrapper"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-black dim:bg-theme-dim-950 dim:text-theme-dim-200 dim:border-theme-dim-700 first:rounded-tl-xl last:rounded-tr-xl"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div
                  class=""
                >
                  Date
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-200 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="transition-transform"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-black dim:bg-theme-dim-950 dim:text-theme-dim-200 dim:border-theme-dim-700 first:rounded-tl-xl last:rounded-tr-xl w-96 min-w-96"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div
                  class=""
                >
                  Recipient
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-black dim:bg-theme-dim-950 dim:text-theme-dim-200 dim:border-theme-dim-700 first:rounded-tl-xl last:rounded-tr-xl"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end flex-row-reverse"
              >
                <div
                  class=""
                >
                  Amount
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-200 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-3 ml-3 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 space-x-3 text-theme-secondary-500 whitespace-nowrap"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 space-x-4"
              >
                <div
                  class="w-0 flex-1"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures transition-colors duration-200"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-200 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-3 mr-3 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 justify-end"
              >
                <div
                  class="font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:border dark:bg-transparent dark:border-theme-danger-info-border dim:border-theme-danger-info-border dim:text-theme-danger-info-text text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex h-full items-center space-x-1"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-3 ml-3 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 space-x-3 text-theme-secondary-500 whitespace-nowrap"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 space-x-4"
              >
                <div
                  class="w-0 flex-1"
                >
                  <span>
                    <span
                      class="text-theme-text font-semibold"
                      data-testid="TransactionRowRecipientLabel"
                    >
                      Multipayment
                    </span>
                    <span
                      class="text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-50 ml-1 font-semibold"
                    >
                      2
                    </span>
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-3 mr-3 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 justify-end"
              >
                <div
                  class="font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:border dark:bg-transparent dark:border-theme-danger-info-border dim:border-theme-danger-info-border dim:text-theme-danger-info-text text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex h-full items-center space-x-1"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Unconfirmed transaction table > should not render in md 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="table-wrapper"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-black dim:bg-theme-dim-950 dim:text-theme-dim-200 dim:border-theme-dim-700 first:rounded-tl-xl last:rounded-tr-xl"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div
                  class=""
                >
                  Date
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-200 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="transition-transform"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-black dim:bg-theme-dim-950 dim:text-theme-dim-200 dim:border-theme-dim-700 first:rounded-tl-xl last:rounded-tr-xl w-96 min-w-96"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div
                  class=""
                >
                  Recipient
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-black dim:bg-theme-dim-950 dim:text-theme-dim-200 dim:border-theme-dim-700 first:rounded-tl-xl last:rounded-tr-xl"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end flex-row-reverse"
              >
                <div
                  class=""
                >
                  Amount
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-200 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-3 ml-3 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 space-x-3 text-theme-secondary-500 whitespace-nowrap"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 space-x-4"
              >
                <div
                  class="w-0 flex-1"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures transition-colors duration-200"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-200 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-3 mr-3 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 justify-end"
              >
                <div
                  class="font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:border dark:bg-transparent dark:border-theme-danger-info-border dim:border-theme-danger-info-border dim:text-theme-danger-info-text text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex h-full items-center space-x-1"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-3 ml-3 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 space-x-3 text-theme-secondary-500 whitespace-nowrap"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 space-x-4"
              >
                <div
                  class="w-0 flex-1"
                >
                  <span>
                    <span
                      class="text-theme-text font-semibold"
                      data-testid="TransactionRowRecipientLabel"
                    >
                      Multipayment
                    </span>
                    <span
                      class="text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-50 ml-1 font-semibold"
                    >
                      2
                    </span>
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-3 mr-3 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 justify-end"
              >
                <div
                  class="font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:border dark:bg-transparent dark:border-theme-danger-info-border dim:border-theme-danger-info-border dim:text-theme-danger-info-text text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex h-full items-center space-x-1"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Unconfirmed transaction table > should not render in sm 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="table-wrapper"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <tbody
          role="rowgroup"
        >
          <tr
            class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group"
            data-testid="TableRow"
          >
            <td
              class="flex-col space-y-4 py-4"
              data-testid="TableRow__mobile"
            >
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500 relative m-0 text-left font-semibold select-none first:pl-0 last:pr-0"
                >
                  Recipient
                </div>
                <div
                  class="flex w-0 flex-1 flex-row-reverse items-center justify-end space-x-4 overflow-hidden"
                >
                  <div
                    class="w-0 flex-1"
                  >
                    <div
                      class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
                    >
                      <span
                        class="font-semibold text-base text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="no-ligatures transition-colors duration-200"
                          data-testid="TruncateEnd"
                        >
                          Mainsail Wallet …
                        </span>
                      </span>
                      <span
                        class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-200 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500 relative m-0 text-left font-semibold select-none first:pl-0 last:pr-0"
                >
                  Date
                </div>
                <div
                  class="text-theme-secondary-500 whitespace-nowrap"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500 relative m-0 text-left font-semibold select-none first:pl-0 last:pr-0"
                >
                  Amount
                </div>
                <div
                  class="font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:border dark:bg-transparent dark:border-theme-danger-info-border dim:border-theme-danger-info-border dim:text-theme-danger-info-text text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex h-full items-center space-x-1"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group"
            data-testid="TableRow"
          >
            <td
              class="flex-col space-y-4 py-4"
              data-testid="TableRow__mobile"
            >
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500 relative m-0 text-left font-semibold select-none first:pl-0 last:pr-0"
                >
                  Recipient
                </div>
                <div
                  class="flex w-0 flex-1 flex-row-reverse items-center justify-end space-x-4 overflow-hidden"
                >
                  <div
                    class="w-0 flex-1"
                  >
                    <span>
                      <span
                        class="text-theme-text font-semibold"
                        data-testid="TransactionRowRecipientLabel"
                      >
                        Multipayment
                      </span>
                      <span
                        class="text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-50 ml-1 font-semibold"
                      >
                        2
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500 relative m-0 text-left font-semibold select-none first:pl-0 last:pr-0"
                >
                  Date
                </div>
                <div
                  class="text-theme-secondary-500 whitespace-nowrap"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500 relative m-0 text-left font-semibold select-none first:pl-0 last:pr-0"
                >
                  Amount
                </div>
                <div
                  class="font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:border dark:bg-transparent dark:border-theme-danger-info-border dim:border-theme-danger-info-border dim:text-theme-danger-info-text text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex h-full items-center space-x-1"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Unconfirmed transaction table > should not render in xl 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="table-wrapper"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-black dim:bg-theme-dim-950 dim:text-theme-dim-200 dim:border-theme-dim-700 first:rounded-tl-xl last:rounded-tr-xl"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div
                  class=""
                >
                  Date
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-200 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="transition-transform"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-black dim:bg-theme-dim-950 dim:text-theme-dim-200 dim:border-theme-dim-700 first:rounded-tl-xl last:rounded-tr-xl w-96 min-w-96"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div
                  class=""
                >
                  Recipient
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-black dim:bg-theme-dim-950 dim:text-theme-dim-200 dim:border-theme-dim-700 first:rounded-tl-xl last:rounded-tr-xl"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end flex-row-reverse"
              >
                <div
                  class=""
                >
                  Amount
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-200 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                >
                  <div
                    class="transition-transform rotate-180"
                    role="img"
                  >
                    <div
                      style="height: 10px; width: 10px;"
                    >
                      <svg
                        id="chevron-down-small"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-3 ml-3 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 space-x-3 text-theme-secondary-500 whitespace-nowrap"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 space-x-4"
              >
                <div
                  class="w-0 flex-1"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures transition-colors duration-200"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-200 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-3 mr-3 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 justify-end"
              >
                <div
                  class="font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:border dark:bg-transparent dark:border-theme-danger-info-border dim:border-theme-danger-info-border dim:text-theme-danger-info-text text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex h-full items-center space-x-1"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pl-3 ml-3 rounded-l dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 space-x-3 text-theme-secondary-500 whitespace-nowrap"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 space-x-4"
              >
                <div
                  class="w-0 flex-1"
                >
                  <span>
                    <span
                      class="text-theme-text font-semibold"
                      data-testid="TransactionRowRecipientLabel"
                    >
                      Multipayment
                    </span>
                    <span
                      class="text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-50 ml-1 font-semibold"
                    >
                      2
                    </span>
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex px-3 items-center my-1 transition-colors duration-100 min-h-11 pr-3 mr-3 rounded-r dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200 dim:group-hover:bg-theme-dim-950 justify-end"
              >
                <div
                  class="font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:border dark:bg-transparent dark:border-theme-danger-info-border dim:border-theme-danger-info-border dim:text-theme-danger-info-text text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex h-full items-center space-x-1"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Unconfirmed transaction table > should not render in xs 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="table-wrapper"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <tbody
          role="rowgroup"
        >
          <tr
            class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group"
            data-testid="TableRow"
          >
            <td
              class="flex-col space-y-4 py-4"
              data-testid="TableRow__mobile"
            >
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500 relative m-0 text-left font-semibold select-none first:pl-0 last:pr-0"
                >
                  Recipient
                </div>
                <div
                  class="flex w-0 flex-1 flex-row-reverse items-center justify-end space-x-4 overflow-hidden"
                >
                  <div
                    class="w-0 flex-1"
                  >
                    <div
                      class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
                    >
                      <span
                        class="font-semibold text-base text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="no-ligatures transition-colors duration-200"
                          data-testid="TruncateEnd"
                        >
                          Mainsail Wallet …
                        </span>
                      </span>
                      <span
                        class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-200 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500 relative m-0 text-left font-semibold select-none first:pl-0 last:pr-0"
                >
                  Date
                </div>
                <div
                  class="text-theme-secondary-500 whitespace-nowrap"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500 relative m-0 text-left font-semibold select-none first:pl-0 last:pr-0"
                >
                  Amount
                </div>
                <div
                  class="font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:border dark:bg-transparent dark:border-theme-danger-info-border dim:border-theme-danger-info-border dim:text-theme-danger-info-text text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex h-full items-center space-x-1"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700 border-dashed group"
            data-testid="TableRow"
          >
            <td
              class="flex-col space-y-4 py-4"
              data-testid="TableRow__mobile"
            >
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500 relative m-0 text-left font-semibold select-none first:pl-0 last:pr-0"
                >
                  Recipient
                </div>
                <div
                  class="flex w-0 flex-1 flex-row-reverse items-center justify-end space-x-4 overflow-hidden"
                >
                  <div
                    class="w-0 flex-1"
                  >
                    <span>
                      <span
                        class="text-theme-text font-semibold"
                        data-testid="TransactionRowRecipientLabel"
                      >
                        Multipayment
                      </span>
                      <span
                        class="text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-50 ml-1 font-semibold"
                      >
                        2
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500 relative m-0 text-left font-semibold select-none first:pl-0 last:pr-0"
                >
                  Date
                </div>
                <div
                  class="text-theme-secondary-500 whitespace-nowrap"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500 relative m-0 text-left font-semibold select-none first:pl-0 last:pr-0"
                >
                  Amount
                </div>
                <div
                  class="font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:border dark:bg-transparent dark:border-theme-danger-info-border dim:border-theme-danger-info-border dim:text-theme-danger-info-text text-base flex h-full w-fit items-center justify-center rounded px-1.5"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex h-full items-center space-x-1"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
